<resources>
    <string name="Name">Nombre</string>
    <string name="firstName">Localidad</string>
    <string name="lastName">Discapacidades</string>
    <string name="userName">Usuario</string>
    <string name="Mail">Correo</string>
    <string name="Age">Edad</string>
    <string name="Number">Número</string>
    <string name="Gender">Género</string>
    <string name="Type">¿Ha trabajado en NexTech?</string>
    <string name="Password">Contraseña</string>
    <string name="writeName">Escriba su nombre</string>
    <string name="writefirstName">Escriba su localidad</string>
    <string name="writelastName">Escriba discapacidades</string>
    <string name="writeuserName">Escriba un Usuario</string>
    <string name="writeMail">Escriba su Correo</string>
    <string name="writeAge">Escriba su Edad</string>
    <string name="writeNumber">Escriba su número</string>
    <string name="writeGender">Seleccionar género</string>
    <string name="writeGender1">Masculino</string>
    <string name="writeGender2">Femenino</string>
    <string name="writeType">Seleccione el Tipo de Persona</string>
    <string name="writeType1">Sí</string>
    <string name="writeType2">No</string>
    <string name="writePassword">Escriba contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="back">Volver</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="welcome">Welcome to the Jungle</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_copiar">Cerrar Sesión</string>
    <string name="list_name">Nombre de la Cuenta</string>
    <string name="list_nameHint">Escriba el Nombre</string>
    <string name="list_pass">Contraseña de la Cuenta</string>
    <string name="list_passHint">Escriba la Contraseña</string>
    <string name="correo_registro">Escriba su correo</string>
    <string name="list_image">Seleccione la que desee tener como perfil</string>
    <string name="list_image1">Original</string>
    <string name="list_image2">Imagen 1</string>
    <string name="list_image3">Imagen 2</string>
    <string name="list_image4">Imagen 3</string>
    <string name="list_button">Enviar</string>
    <string name="registrar">Registrarse</string>
    <string name="regresar">Regresar</string>
    <string name="bienvenida_contrasena">Olvidé mi contraseña</string>
    <string name="buscar">Buscar</string>
    <string name="usuario_login">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="aceptar">Login</string>
    <string name="contrasena_olv">Olvidé mi contraseña</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena_usario">Ingresar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="yo">Otañez Montes Naian Madai, Nextech</string>
    <string name="acercade">Acerca de</string>
    <string name="regresaacerca">Regresar</string>
    <string name="app_name">ProyectoIlulu2_0</string>
    <string name="correo">Escriba su correo</string>
    <string name="api">Pagar</string>
    <string name="monto">Monto</string>
    <string name="transacc">Transacción</string>
</resources>